--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+v1.3 (20081028)
+	- introduced mode -p  (preset field names)
+	- introduced option -l  (line limit)
+	- code cleanup
+
 v1.2 (20080929)
 	- introduced option -a  (accept only arbitrary separator)
 	- code cleanup
