--- a/man/csv.1
+++ b/man/csv.1
@@ -467,6 +467,9 @@ whereas input modes \fB\-g\fR and \fB\-i\fR can handle empty input gracefully.)
 .B 10
 Internal error
 (out of memory).
+.SH LICENSE
+MIT
+(https://opensource.org/licenses/MIT)
 .SH AUTHOR
 Maximilian Eul <maximilian@eul.cc>
 (https://github.com/mle86)
