--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,9 @@
+v2.1 (2016-10-26)
+	- support NUL bytes in input
+	- introduced option --color  (set color mode)
+	- removed line length limit
+	- fix column name escaping in -m mode
+
 v2.0 (2016-10-15)
 	- introduced output mode -J  (compact JSON output)
 	- introduced output mode -X  (shell var output)
