--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,6 @@
 next
 	- introduced option --trim  (enable line trim)
+	- fix --skip line length limitation
 	- fix option handling
 
 v2.1 (2016-10-26)
