EXIT_INTERNAL on getline() read error

--- a/man/csv.1
+++ b/man/csv.1
@@ -495,7 +495,7 @@ whereas input modes \fB\-g\fR and \fB\-i\fR can handle empty input gracefully.)
 .TP
 .B 10
 Internal error
-(out of memory).
+(out of memory or getline(3) read error).
 .SH LICENSE
 MIT
 (https://opensource.org/licenses/MIT)
