--- a/man/csv.1
+++ b/man/csv.1
@@ -135,7 +135,7 @@ Skip the first \fIN\fR input lines.
 In modes \fB\-n\fR and \fB\-a\fR,
 skip the first \fIN\fR input lines
 after the header line.
-Setting \fIN\fR to zero mean no\ skip,
+Setting \fIN\fR to zero means no\ skip,
 which is the default.
 .TP
 \fB\-l\fR \fIN\fR, \fB\-\-limit\fR \fIN\fR
@@ -237,7 +237,7 @@ but will also recognize them
 under one of several possible name variants.
 .SH PRETTY-PRINTING
 The program has limited pretty-printing capabilities:
-if the output (\fBstdout\fR) is a tty,
+if the output (\fIstdout\fR) is a tty,
 the output will be colorized.
 Indentation will not be changed in any way.
 .IP - 2
@@ -425,7 +425,7 @@ either with single (\fB'\fR)
 or double apostrophes (\fB"\fR).
 This quoting character
 will be removed from the output.
-fields need not be quoted,
+Fields need not be quoted,
 except for multiple-line values
 (see option \fB\-b\fR).
 If the quoting character
