clarify doc: quoting

--- a/man/csv.1
+++ b/man/csv.1
@@ -427,7 +427,8 @@ This quoting character
 will be removed from the output.
 Fields need not be quoted,
 except for multiple-line values
-(see option \fB\-b\fR).
+(see option \fB\-b\fR)
+or fields containing the separator character.
 If the quoting character
 is present inside a quoted field,
 it must be doubled.
