clarify doc: color

--- a/man/csv.1
+++ b/man/csv.1
@@ -240,6 +240,9 @@ The program has limited pretty-printing capabilities:
 if the output (\fIstdout\fR) is a tty,
 the output will be colorized.
 Indentation will not be changed in any way.
+(See the \fB--color\fR\ option
+to force pretty-printing if \fIstdout\fR is not a\ tty
+or to disable it completely.)
 .IP - 2
 Column names will be printed in green.
 .IP - 2
