--- a/man/csv.1
+++ b/man/csv.1
@@ -506,3 +506,15 @@ MIT
 .SH AUTHOR
 Maximilian Eul <maximilian@eul.cc>
 (https://github.com/mle86)
+.SH STANDARDS
+Y.\ Shafranovich,
+\fICommon Format and MIME Type for Comma-Separated Values (CSV) Files\fR,
+RFC\ 4180
+(https://tools.ietf.org/html/rfc4180),
+October 2005.
+.P
+T.\ Bray,
+\fIThe JavaScript Object Notation (JSON) Data Interchange Format\fR,
+RFC\ 7159
+(https://tools.ietf.org/html/rfc7159),
+March 2014.
