doc: fix escaping

--- a/man/csv.1
+++ b/man/csv.1
@@ -397,7 +397,7 @@ It is recommended that input
 in an encoding
 other than plain ASCII or UTF\-8
 is converted to UTF\-8
-with a tool like \fB\iconv\fR(1)
+with a tool like \fBiconv\fR(1)
 before being passed to this program.
 .SS Separator Character
 By default,
