--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+next
+	- fix trailing separator on EOF issue
+
 v2.2 (2016-11-01)
 	- introduced option --trim  (enable line trim)
 	- fix --skip line length limitation
