--- a/man/csv.1
+++ b/man/csv.1
@@ -377,7 +377,7 @@ with lines and fields counted from zero.
 .P
 Again, there's a special case for the \fB\-i\fR input mode,
 because it has no relevant column names:
-The \(lqCSV_COLNANE_\fIcolno\fR\(rq assignments will be omitted,
+The \(lqCSV_COLNAME_\fIcolno\fR\(rq assignments will be omitted,
 and the first input line is read as a regular record.
 .cm "csv \-i \-X < test.csv"
 CSV_0_0=h1
