added --unknowns option

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,5 @@
-next
+next (2017-03)
+	- introduced option -u  (include unknown columns in -n mode)
 	- fix trailing separator on EOF issue
 
 v2.2 (2016-11-01)
