--- a/man/csv.1
+++ b/man/csv.1
@@ -213,6 +213,11 @@ Don't try to remove UTF\-8/16 BOMs from the first line.
 (By default, the program will strip the BOM from the first line,
 if there is one.)
 .TP
+.B \-u, \-\-unknowns
+With this option, the \fB-n\fR mode will include all unknown columns,
+like a combination of the \fB-n\fR and \fB-a\fR modes.
+(By default, the \fB-n\fR input mode will discard all unknown columns.)
+.TP
 .B \-h, \-\-help
 Show command line usage information.
 .TP
