fix fmt escaping in colnames, added test

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -2,6 +2,7 @@ next (2017-03)
 	- introduced option -u  (include unknown columns in -n mode)
 	- fix -jJ long options
 	- fix trailing separator on EOF issue
+	- fix column name escaping
 
 v2.2 (2016-11-01)
 	- introduced option --trim  (enable line trim)
