--- a/man/csv.1
+++ b/man/csv.1
@@ -274,15 +274,15 @@ case normalization,
 or canonization.
 .SH CSV OUTPUT MODE
 In CSV output mode (\fB\-C\fR), the program will print valid CSV.
-It tries to follow RFC\-4180 as closely as possible:
+It tries to follow RFC\ 4180 as closely as possible:
 it uses a plain comma as field separator,
 uses CRLF as record separator,
 quotes fields with double-quotes
 and escapes double-quotes in fields by doubling them,
 and only quotes fields that contain a special character.
-LF Linebreaks in fields will always be printed as CRLF.
+LF\ linebreaks in fields will always be printed as CRLF.
 .P
-However in contrast to RFC\-4180
+However in contrast to RFC\ 4180
 which mandates plain 7-bit ASCII input
 and forbids use of control characters below 0x1F,
 this mode will accept any encoding
