--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,21 +1,21 @@
 next (2017-03)
 	- introduced output mode -C  (csv output)
 	- introduced option -u  (include unknown columns in -n mode)
-	- fix -jJ long options
-	- fix trailing separator on EOF issue
-	- fix column name escaping
+	- fixed -jJ long options
+	- fixed trailing separator on EOF issue
+	- fixed column name escaping
 	- correct semantic versioning
 
 v2.2 (2016-11-01)
 	- introduced option --trim  (enable line trim)
-	- fix --skip line length limitation
-	- fix option handling
+	- fixed --skip line length limitation
+	- fixed option handling
 
 v2.1 (2016-10-26)
 	- support NUL bytes in input
 	- introduced option --color  (set color mode)
 	- removed line length limit
-	- fix column name escaping in -m mode
+	- fixed column name escaping in -m mode
 
 v2.0 (2016-10-15)
 	- introduced output mode -J  (compact JSON output)
