--- a/man/csv.1
+++ b/man/csv.1
@@ -269,9 +269,11 @@ under one of several possible name variants.
 Keep in mind that the program
 will do byte-wise string comparisons
 between the arguments and the input column names,
-without any encoding conversion,
-case normalization,
+without any encoding conversion
 or canonization.
+The only normalization done
+is lower-casing with \fBtolower\fR(3),
+which only works on plain ascii letters (A..Z).
 .SH CSV OUTPUT MODE
 In CSV output mode (\fB\-C\fR), the program will print valid CSV.
 It tries to follow RFC\ 4180 as closely as possible:
