--- a/man/csv.1
+++ b/man/csv.1
@@ -224,6 +224,12 @@ With this option, the \fB-n\fR mode will include all unknown columns,
 like a combination of the \fB-n\fR and \fB-a\fR modes.
 (By default, the \fB-n\fR input mode will discard all unknown columns.)
 .TP
+.B \-U, \-\-no-unknowns
+With this option, the \fB-n\fR mode will output only explicitly named columns.
+This is the default behavior.
+The option is the opposite of the \fB-u\fR option
+and has no effect in other input modes.
+.TP
 .B \-h, \-\-help
 Show command line usage information.
 .TP
