--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+next (2017-05-09)
+	- fixed column string buffer issue
+
 v2.3.2 (2017-04-10)
 	- introduced option -U  (don't include unknown columns in -n mode)
 
