changed default quote style to -q"
Previously, the default quote style was '-q auto'.
It's '-q "' now to handle files with accidental mixed-style quotes better.

This became necessary for input files like this:
	"long column",'t Gude,12345
Previously, the second field would have been considered '-quoted
and not closed, resulting in a parse error.

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,5 @@
 next (2017-05)
+	- switched default quoting style from "mixed" to "doublequotes"
 	- introduced option -q  (set field quoting character)
 
 v2.3.3 (2017-05-09)
