--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+next (2017-05)
+	- fixed --limit on multi-line records
+
 v2.4.0 (2017-05-14)
 	- switched default quoting style from "mixed" to "doublequotes"
 	- introduced option -q  (set field quoting character)
