doc: -bl#, -bs#

--- a/man/csv.1
+++ b/man/csv.1
@@ -146,6 +146,9 @@ This option allows quoted fields to contain linebreaks,
 i.e. to span several lines.
 Without this option,
 multi-line field values will cause an error.
+This option causes
+the \fB\-\-skip\fR and \fB\-\-limit\fR options
+to count records instead of lines.
 .TP
 \fB\-s\fR \fIN\fR, \fB\fB\-\-skip\fR \fIN\fR
 Skip the first \fIN\fR input lines.
