doc: skipped records must be valid
Plain --skip can just skip input lines without parsing them.

In -b mode, this does not work:
to determine where the record ends (might be on some other line!),
the input module has to actually read the input.
Formatting errors in skipped lines will thus terminate the program
(or, if used with the -e option, leave the parser in an unexpected state).

--- a/man/csv.1
+++ b/man/csv.1
@@ -148,7 +148,10 @@ Without this option,
 multi-line field values will cause an error.
 This option causes
 the \fB\-\-skip\fR and \fB\-\-limit\fR options
-to count records instead of lines.
+to count records instead of lines,
+which means that you cannot use \fB\-\-skip\fR anymore
+to skip over malformed input lines
+when using the \fB\-b\fR option.
 .TP
 \fB\-s\fR \fIN\fR, \fB\fB\-\-skip\fR \fIN\fR
 Skip the first \fIN\fR input lines.
