doc: updated readme

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+next (2017-07)
+	- readme cleanup
+
 v2.4.1 (2017-05)
 	- fixed --limit when reading multi-line records (-b)
 	- fixed --skip when reading multi-line records (-b)
