--- a/man/csv.1
+++ b/man/csv.1
@@ -138,6 +138,8 @@ on the first quoted field in the input
 (recognized quoting characters are "doublequotes" and 'singlequotes').
 The special value \(lq\fImixed\fR\(rq
 allows the input to use both quoting characters.
+The special value \(lq\fInone\fR\(rq
+causes all potential enclosure characters to be read as-is.
 .TP
 .B \-b, \-\-allow\-breaks
 By default,
