input: recognize more zero formats
(for --filter=zero|empty-or-zero|blank-or-zero)

--- a/man/csv.1
+++ b/man/csv.1
@@ -250,7 +250,7 @@ that consist of empty-string or whitespace-only fields only.
 .IP - 2
 .BR zero / 0 :
 Drops all records
-that consist of zero values (\(lq0\(rq) fields only.
+that consist of zero values (\(lq0\(rq, \(lq.000\(rq...) fields only.
 .IP - 2
 .BR empty-or-zero / z0 :
 Drops all records
