--- a/man/csv.1
+++ b/man/csv.1
@@ -250,15 +250,15 @@ that consist of empty-string or whitespace-only fields only.
 .IP - 2
 .BR zero / 0 :
 Drops all records
-that consist of zero values (\(lq0\(rq, \(lq.000\(rq...) fields only.
+that consist of zero-valued (\(lq0\(rq, \(lq.000\(rq...) fields only.
 .IP - 2
 .BR empty-or-zero / z0 :
 Drops all records
-that consist of zero values and/or empty-string fields only.
+that consist of zero-valued and/or empty-string fields only.
 .IP - 2
 .BR blank-or-zero / b0 :
 Drops all records
-that consist of zero values and/or whitespace fields only.
+that consist of zero-valued and/or whitespace fields only.
 .IP - 2
 .BR none / off :
 No record filtering.
