--- a/man/csv.1
+++ b/man/csv.1
@@ -231,10 +231,15 @@ Possible values for \fIMODE\fR:
 Removes whitespace from the start and end of every input line.
 This is the default if the option is given without \fIMODE\fR.
 .IP - 2
+.BR fields :
+Removes whitespace from the start and end of every field value.
+Currently this is only available in \fB\-\-fixed\-width\fR input mode.
+.IP - 2
 .BR none / off :
 No whitespace removal.
-Whitespace at the start/end of a line
-is considered to be part of the first/last field's value.
+Whitespace
+is considered to be
+part of the input field values.
 This is the default setting if the option is missing.
 .RE
 .PD
