--- a/man/csv.1
+++ b/man/csv.1
@@ -53,7 +53,10 @@ and compares them to the first line of the CSV input,
 printing only the named columns.
 Separate column names with a single \(lq\fB.\fR\(rq argument!
 The name order is irrelevant, as is case.
-See the section \(lqNamed Columns Mode\(rq below
+See the section
+.\" LINK-TO NAMED COLUMNS MODE
+\(lqNamed Columns Mode\(rq
+below
 for more information about this input mode.
 .TP
 .B \-g, \-\-assigned\-names
@@ -111,11 +114,17 @@ each of which represents one input line.
 .TP
 .B \-X, \-\-shell-vars
 Output in shell\ variable\ assignment format.
-See the \(lqExamples\(rq section below.
+See the
+.\" LINK-TO EXAMPLES
+\(lqExamples\(rq
+section below.
 .TP
 .B \-C, \-\-csv-output
 Standardized CSV output.
-See the \(lqCSV output mode\(rq section below for more details.
+See the
+.\" LINK-TO CSV OUTPUT MODE
+\(lqCSV output mode\(rq
+section below for more details.
 .SH OTHER OPTIONS
 .TP
 \fB\-d\fR \fIC\fR, \fB\-\-separator\fR \fIC\fR
